[tool.poetry]
name = "tornado-sqlalchemy"
version = "0.7.0"
description = "SQLAlchemy support for Tornado"
authors = ["Siddhant Goel <me@sgoel.org>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
]
include = ["README.rst", "LICENSE.txt"]
keywords = ["databases", "tornado", "sqlalchemy"]
repository = "https://github.com/siddhantgoel/tornado-sqlalchemy"
documentation = "https://tornado-sqlalchemy.readthedocs.io/en/stable/"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3"
tornado = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mysqlclient = "^2.2"
psycopg2-binary = "^2.8"
pytest = "^7.4"
black = "^23.9"
mypy = "^1.5"
sqlalchemy-stubs = "^0.2.0"

[tool.black]
line-length = 79
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
