[tool.poetry]
name = "tornado-sqlalchemy"
version = "0.8.0"
description = "SQLAlchemy support for Tornado"
authors = ["Siddhant Goel <me@sgoel.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
]
include = ["README.md", "LICENSE.txt"]
keywords = ["databases", "tornado", "sqlalchemy"]
repository = "https://github.com/siddhantgoel/tornado-sqlalchemy"
documentation = "https://tornado-sqlalchemy.readthedocs.io/en/stable/"

[tool.poetry.dependencies]
python = "^3.8.1"
SQLAlchemy = "^1.4 || ^2.0"
tornado = "^6.0"
taskipy = "^1.12.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.1"
mysqlclient = "^2.2"
psycopg2-binary = "^2.8"
pytest = "^7.4"
black = "^23.9"
mypy = "^1.4"
sqlalchemy-stubs = "^0.2.0"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.taskipy.tasks]
fmt = "black examples/ tornado_sqlalchemy/ tests/"

lint-black  = "black --check examples/ tornado_sqlalchemy/ tests/"
lint-flake8 = "flake8 examples/ tornado_sqlalchemy/ tests/"
lint = "task lint-black && task lint-flake8"

test-pytest = "pytest tests/"
test = "task test-pytest"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
